Added extract method to extract the meter before testing the needle template

--- a/WarmWaterService/App.config
+++ b/WarmWaterService/App.config
@@ -8,6 +8,7 @@
 		<add key="filter" value="*.jpg" />
 		<add key="sleepinterval" value="2000"/>
 		<add key="port" value="1234"/>
-		
+		<add key="MaalerMal" value="MeterMalWithGray.jpg" />
+		<add key="NaalMal" value="KorrektNaalMedGraatt.jpg" />
 	</appSettings>
 </configuration>
