Downgraded and removed some comments

--- a/WarmWaterService/App.config
+++ b/WarmWaterService/App.config
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
 	</startup>
 	<appSettings>
-		<add key="folder" value="C:\temp\warmwater\" />
-		<add key="filter" value="*.jpg" />
+		<add key="folder" value="C:\temp\warmwater\"/>
+		<add key="filter" value="*.jpg"/>
 		<add key="sleepinterval" value="2000"/>
 		<add key="port" value="1234"/>
-		<add key="MaalerMal" value="MeterMalWithGray.jpg" />
-		<add key="NaalMal" value="KorrektNaalMedGraatt.jpg" />
+		<add key="MaalerMal" value="MeterMalWithGray.jpg"/>
+		<add key="NaalMal" value="KorrektNaalMedGraatt.jpg"/>
 	</appSettings>
 </configuration>
