Added saving off the image that is used to find rotation

--- a/WarmWaterService/App.config
+++ b/WarmWaterService/App.config
@@ -1,14 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
-	</startup>
-	<appSettings>
-		<add key="folder" value="C:\temp\warmwater\"/>
-		<add key="filter" value="*.jpg"/>
-		<add key="sleepinterval" value="2000"/>
-		<add key="port" value="1234"/>
-		<add key="MaalerMal" value="MeterMalWithGray.jpg"/>
-		<add key="NaalMal" value="KorrektNaalMedGraatt.jpg"/>
-	</appSettings>
+  <startup>
+	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <appSettings>
+	<add key="folder" value="C:\temp\warmwater\" />
+	<add key="CurrentImageSavePath" value="c:\temp\warmwater\currentImage\currentImage.jpg"/>
+	<add key="filter" value="*.jpg" />
+	<add key="sleepinterval" value="2000" />
+	<add key="port" value="1234" />
+	<add key="MaalerMal" value="MeterMalWithGray.jpg" />
+	<add key="NaalMal" value="KorrektNaalMedGraatt.jpg" />
+  </appSettings>
+  <runtime>
+	<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+	  <dependentAssembly>
+		<assemblyIdentity name="Emgu.CV.World" publicKeyToken="7281126722ab4438" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-3.2.0.2721" newVersion="3.2.0.2721" />
+	  </dependentAssembly>
+	</assemblyBinding>
+  </runtime>
 </configuration>
