--- a/ImageProcessing/packages.config
+++ b/ImageProcessing/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EMGU.CV" version="3.3.0.2824" targetFramework="net462" />
+  <package id="Emgu.CV" version="3.2.0.2721" targetFramework="net461" />
   <package id="EmguCV" version="3.1.0.1" targetFramework="net462" />
   <package id="OpenTK" version="1.1.2225.0" targetFramework="net462" />
   <package id="OpenTK.GLControl" version="1.1.2225.0" targetFramework="net462" />
